# bot

./: .env.sample  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: pyright.yml
bot/: __main__.py  bot.py  constants.py
bot/database/: __init__.py  base.py  models.py
migrations/: env.py
migrations/versions/: 2b27e499965c_adicionar_modelo_de_usuário.py  2ecf544f7e3e_create_user_model.py
