[project]
name = "bot"
version = "0.1.0"
description = "Custom discord bot for 'pudimverso'"
authors = [
	{name = "Nathyz", email = "swiftnathyz@gmail.com"},
	{name = "Teilor", email = "teilochan100@gmail.com"},
]
dependencies = [
	"discord-py>=2.4.0",
	"pydantic>=2.9.0",
	"pydantic-settings>=2.4.0",
	"pre-commit>=3.8.0",
	"pyright>=1.1.379",
	"ruff>=0.6.4",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "Apache-2.0"}

[tool.pdm]
