[project]
name = "bot"
version = "0.1.0"
description = "Custom discord bot for 'pudimverso'"
authors = [
	{name = "Nathyz", email = "swiftnathyz@gmail.com"},
	{name = "Teilor", email = "teilochan100@gmail.com"},
]
dependencies = [
    "discord-py>=2.4.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.34",
    "psycopg2-binary>=2.9.9",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "Apache-2.0"}

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pyright>=1.1.379",
    "ruff>=0.6.4",
    "pre-commit>=3.8.0",
]
